--- a/environment.yml
+++ b/environment.yml
@@ -1,274 +1,279 @@
 name: AOS-ImageRestoration
 channels:
   - pytorch
+  - menpo
   - nvidia
+  - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - abseil-cpp=20230802.0=h6a678d5_2
-  - aiosignal=1.2.0=pyhd3eb1b0_0
-  - argon2-cffi=21.3.0=pyhd3eb1b0_0
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - backcall=0.2.0=pyhd3eb1b0_0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=2_kmp_llvm
   - blas=1.0=mkl
-  - bleach=4.1.0=pyhd3eb1b0_0
-  - brotli-python=1.0.9=py310h6a678d5_7
+  - brotlipy=0.7.0=py37h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
-  - c-ares=1.19.1=h5eee18b_0
   - ca-certificates=2023.08.22=h06a4308_0
-  - cachetools=4.2.2=pyhd3eb1b0_0
-  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - cairo=1.16.0=hb05425b_5
+  - certifi=2022.12.7=py37h06a4308_0
+  - cffi=1.15.1=py37h5eee18b_3
   - cuda-cudart=11.8.89=0
   - cuda-cupti=11.8.87=0
   - cuda-libraries=11.8.0=0
   - cuda-nvrtc=11.8.89=0
   - cuda-nvtx=11.8.86=0
   - cuda-runtime=11.8.0=0
-  - cyrus-sasl=2.1.28=h52b45da_1
-  - dbus=1.13.18=hb2f20db_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - defusedxml=0.7.1=pyhd3eb1b0_0
-  - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.5.0=h6a678d5_0
-  - ffmpeg=4.3=hf484d3e_0
+  - ffmpeg=4.0=hcdf2ecd_0
   - fontconfig=2.14.1=h4c34cd2_2
+  - freeglut=3.0.0=hf484d3e_5
   - freetype=2.12.1=h4a9f257_0
   - giflib=5.2.1=h5eee18b_3
+  - glfw=3.3.8=hd590300_2
+  - glfw3=3.2.1=0
   - glib=2.69.1=he621ea3_2
   - gmp=6.2.1=h295c915_3
   - gnutls=3.6.15=he1e5248_0
-  - grpc-cpp=1.48.2=he1ff14a_3
-  - gst-plugins-base=1.14.1=h6a678d5_1
-  - gstreamer=1.14.1=h5eee18b_1
-  - gtest=1.14.0=hdb19cb5_0
-  - icu=73.1=h6a678d5_0
-  - intel-openmp=2023.1.0=hdb19cb5_46306
+  - graphite2=1.3.14=h295c915_1
+  - harfbuzz=1.8.8=hffaf4a1_0
+  - hdf5=1.10.2=hba1933b_1
+  - icu=58.2=he6710b0_3
+  - intel-openmp=2021.4.0=h06a4308_3561
+  - jasper=2.0.14=hd8c5072_2
   - jpeg=9e=h5eee18b_1
-  - json5=0.9.6=pyhd3eb1b0_0
-  - jupyter_client=8.6.0=py310h06a4308_0
-  - jupyter_console=6.6.3=py310h06a4308_0
-  - jupyter_core=5.5.0=py310h06a4308_0
-  - jupyter_events=0.8.0=py310h06a4308_0
-  - jupyter_server=2.10.0=py310h06a4308_0
-  - jupyter_server_terminals=0.4.4=py310h06a4308_1
-  - jupyterlab_pygments=0.1.2=py_0
-  - jupyterlab_server=2.25.1=py310h06a4308_0
-  - jupyterlab_widgets=3.0.9=py310h06a4308_0
-  - krb5=1.20.1=h143b758_1
   - lame=3.100=h7b6447c_0
   - lcms2=2.12=h3be6417_0
   - ld_impl_linux-64=2.38=h1181459_1
   - lerc=3.0=h295c915_0
-  - libclang=14.0.6=default_hc6dbbc7_1
-  - libclang13=14.0.6=default_he11475f_1
   - libcublas=11.11.3.6=0
   - libcufft=10.9.0.58=0
   - libcufile=1.8.1.2=0
-  - libcups=2.4.2=h2d74bed_1
   - libcurand=10.3.4.101=0
   - libcusolver=11.4.1.48=0
   - libcusparse=11.7.5.86=0
   - libdeflate=1.17=h5eee18b_1
-  - libedit=3.1.20221030=h5eee18b_0
   - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
+  - libgcc-ng=13.2.0=h807b86a_3
+  - libgfortran-ng=7.5.0=ha8ba4b0_17
+  - libgfortran4=7.5.0=ha8ba4b0_17
+  - libglu=9.0.0=hf484d3e_1
   - libiconv=1.16=h7f8727e_2
   - libidn2=2.3.4=h5eee18b_0
-  - libjpeg-turbo=2.0.0=h9bf148f_0
-  - libllvm14=14.0.6=hdb19cb5_3
   - libnpp=11.8.0.86=0
   - libnvjpeg=11.9.0.86=0
+  - libopencv=3.4.2=hb342d67_1
+  - libopus=1.3.1=h7b6447c_0
   - libpng=1.6.39=h5eee18b_0
-  - libpq=12.15=hdbd6064_1
-  - libprotobuf=3.20.3=he621ea3_0
-  - libsodium=1.0.18=h7b6447c_0
-  - libstdcxx-ng=11.2.0=h1234567_1
+  - libstdcxx-ng=13.2.0=h7e041cc_3
   - libtasn1=4.19.0=h5eee18b_0
   - libtiff=4.5.1=h6a678d5_0
   - libunistring=0.9.10=h27cfd23_0
   - libuuid=1.41.5=h5eee18b_0
-  - libwebp=1.3.2=h11a3e52_0
-  - libwebp-base=1.3.2=h5eee18b_0
-  - libxcb=1.15=h7f8727e_0
-  - libxkbcommon=1.0.1=h5eee18b_1
-  - libxml2=2.10.4=hf1b16e4_1
+  - libvpx=1.7.0=h439df22_0
+  - libwebp=1.2.4=h11a3e52_1
+  - libwebp-base=1.2.4=h5eee18b_1
+  - libxcb=1.15=h0b41bf4_0
+  - libxml2=2.10.4=hcbfbd50_0
   - llvm-openmp=14.0.6=h9e868ea_0
   - lz4-c=1.9.4=h6a678d5_0
-  - mkl=2023.1.0=h213fc3f_46344
-  - mkl_fft=1.3.8=py310h5eee18b_0
-  - mkl_random=1.2.4=py310hdb19cb5_0
-  - mpc=1.1.0=h10f8cd9_1
-  - mpfr=4.0.2=hb69a4c5_1
-  - mysql=5.7.24=h721c034_2
+  - mkl=2021.4.0=h06a4308_640
+  - mkl-service=2.4.0=py37h7f8727e_0
+  - mkl_fft=1.3.1=py37hd3c417c_0
+  - mkl_random=1.2.2=py37h51133e4_0
   - ncurses=6.4=h6a678d5_0
   - nettle=3.7.3=hbbd107a_1
-  - numpy-base=1.26.0=py310hb5e798b_0
+  - numpy-base=1.21.5=py37ha15fc14_3
+  - opencv=3.4.2=py37h6fd60c2_1
   - openh264=2.1.1=h4ff587b_0
-  - openjpeg=2.4.0=h3ad879b_0
-  - openssl=3.0.12=h7f8727e_0
-  - pandocfilters=1.5.0=pyhd3eb1b0_0
-  - parso=0.8.3=pyhd3eb1b0_0
+  - openssl=1.1.1w=h7f8727e_0
   - pcre=8.45=h295c915_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - prometheus_client=0.14.1=py310h06a4308_0
-  - prompt_toolkit=3.0.36=hd3eb1b0_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - pyasn1=0.4.8=pyhd3eb1b0_0
-  - pyasn1-modules=0.2.8=py_0
+  - pip=22.3.1=py37h06a4308_0
+  - pixman=0.40.0=h7f8727e_1
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - py-opencv=3.4.2=py37hb342d67_1
   - pycparser=2.21=pyhd3eb1b0_0
-  - pyqt=5.15.10=py310h6a678d5_0
-  - python=3.10.13=h955ad1f_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-fastjsonschema=2.16.2=py310h06a4308_0
-  - pytorch=2.1.1=py3.10_cuda11.8_cudnn8.7.0_0
+  - pyopengl=3.1.1a1=py37h06a4308_0
+  - pysocks=1.7.1=py37_1
+  - python=3.7.16=h7a1cb2a_0
+  - pytorch=1.13.1=py3.7_cpu_0
   - pytorch-cuda=11.8=h7e8668a_5
-  - pytorch-mutex=1.0=cuda
-  - qt-main=5.15.2=h53bd1ea_10
-  - re2=2022.04.01=h295c915_0
+  - pytorch-mutex=1.0=cpu
   - readline=8.2=h5eee18b_0
-  - requests-oauthlib=1.3.0=py_0
-  - rsa=4.7.2=pyhd3eb1b0_1
+  - setuptools=65.6.3=py37h06a4308_0
   - six=1.16.0=pyhd3eb1b0_1
   - sqlite=3.41.2=h5eee18b_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tbb=2021.8.0=hdb19cb5_0
   - tk=8.6.12=h1ccaba5_0
-  - torchtriton=2.1.0=py310
-  - typing_extensions=4.7.1=py310h06a4308_0
-  - wcwidth=0.2.5=pyhd3eb1b0_0
+  - torchaudio=0.13.1=py37_cpu
+  - torchvision=0.13.1=cpu_py37h164cc8f_0
+  - typing_extensions=4.3.0=py37h06a4308_0
+  - wheel=0.38.4=py37h06a4308_0
+  - xorg-fixesproto=5.0=h7f98852_1002
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libx11=1.8.7=h8ee46fc_0
+  - xorg-libxau=1.0.11=hd590300_0
+  - xorg-libxcursor=1.2.0=h0b41bf4_1
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h0b41bf4_2
+  - xorg-libxfixes=5.0.3=h7f98852_1004
+  - xorg-libxinerama=1.1.5=h27087fc_0
+  - xorg-libxrandr=1.5.2=h7f98852_1
+  - xorg-libxrender=0.9.11=hd590300_0
+  - xorg-randrproto=1.5.0=h7f98852_1001
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h0b41bf4_1003
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.4.2=h5eee18b_0
-  - yaml=0.2.5=h7b6447c_0
-  - zeromq=4.3.4=h2531618_0
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
-    - absl-py==1.4.0
-    - aiohttp==3.8.5
-    - anyio==3.5.0
+    - absl-py==2.0.0
+    - aiofiles==22.1.0
+    - aiosqlite==0.19.0
+    - anyio==3.7.1
+    - argon2-cffi==23.1.0
     - argon2-cffi-bindings==21.2.0
-    - async-lru==2.0.4
-    - async-timeout==4.0.2
+    - arrow==1.2.3
     - attrs==23.1.0
-    - babel==2.11.0
+    - babel==2.13.1
+    - backcall==0.2.0
     - beautifulsoup4==4.12.2
-    - blinker==1.6.2
-    - brotli==1.0.9
-    - certifi==2023.11.17
-    - cffi==1.16.0
-    - click==8.1.7
-    - comm==0.1.2
-    - contourpy==1.2.0
-    - cryptography==41.0.3
-    - cycler==0.12.1
-    - debugpy==1.6.7
-    - exceptiongroup==1.0.4
-    - fastjsonschema==2.16.2
-    - filelock==3.13.1
-    - fonttools==4.45.1
-    - frozenlist==1.4.0
-    - gmpy2==2.1.2
-    - google-auth==2.22.0
-    - google-auth-oauthlib==0.5.2
-    - grpcio==1.48.2
-    - idna==3.4
-    - ipykernel==6.25.0
-    - ipython==8.15.0
-    - ipywidgets==8.0.4
-    - jedi==0.18.1
+    - bleach==6.0.0
+    - cached-property==1.5.2
+    - cachetools==5.3.2
+    - charset-normalizer==3.3.2
+    - configparser==5.3.0
+    - cryptography==41.0.7
+    - cycler==0.11.0
+    - cython==0.29.24
+    - debugpy==1.7.0
+    - decorator==5.1.1
+    - defusedxml==0.7.1
+    - entrypoints==0.4
+    - exceptiongroup==1.2.0
+    - fastjsonschema==2.19.0
+    - fqdn==1.5.1
+    - google-auth==2.23.4
+    - google-auth-oauthlib==0.4.6
+    - grpcio==1.59.3
+    - h11==0.14.0
+    - idna==3.6
+    - imageio==2.9.0
+    - importlib-metadata==6.7.0
+    - importlib-resources==5.12.0
+    - ipykernel==6.16.2
+    - ipython==7.32.0
+    - ipython-genutils==0.2.0
+    - ipywidgets==7.6.3
+    - isoduration==20.11.0
+    - jedi==0.19.1
     - jinja2==3.1.2
-    - jsonschema==4.19.2
-    - jsonschema-specifications==2023.7.1
+    - joblib==1.3.2
+    - json5==0.9.14
+    - jsonpointer==2.4
+    - jsonschema==4.17.3
     - jupyter==1.0.0
-    - jupyter-client==8.6.0
+    - jupyter-client==7.4.9
     - jupyter-console==6.6.3
-    - jupyter-core==5.5.0
-    - jupyter-events==0.8.0
-    - jupyter-lsp==2.2.0
-    - jupyter-server==2.10.0
-    - jupyter-server-terminals==0.4.4
-    - jupyterlab==4.0.8
-    - jupyterlab-server==2.25.1
+    - jupyter-core==4.12.0
+    - jupyter-events==0.6.3
+    - jupyter-server==1.24.0
+    - jupyter-server-fileid==0.9.0
+    - jupyter-server-ydoc==0.8.0
+    - jupyter-ydoc==0.2.5
+    - jupyterlab==3.6.6
+    - jupyterlab-pygments==0.2.2
+    - jupyterlab-server==2.24.0
     - jupyterlab-widgets==3.0.9
     - kiwisolver==1.4.5
-    - markdown==3.4.1
-    - markupsafe==2.1.1
-    - matplotlib==3.8.2
-    - matplotlib-inline==0.1.6
-    - mistune==2.0.4
-    - mkl-fft==1.3.8
-    - mkl-random==1.2.4
-    - mkl-service==2.4.0
-    - mpmath==1.3.0
-    - multidict==6.0.2
-    - nbclient==0.8.0
-    - nbconvert==7.10.0
-    - nbformat==5.9.2
-    - nest-asyncio==1.5.6
-    - networkx==3.1
-    - notebook==7.0.6
+    - lxml==4.9.3
+    - markdown==3.4.4
+    - markupsafe==2.1.3
+    - matplotlib==3.4.2
+    - matplotlib-inline==0.1.3
+    - mistune==3.0.2
+    - nbclassic==1.0.0
+    - nbclient==0.7.4
+    - nbconvert==7.6.0
+    - nbformat==5.8.0
+    - nest-asyncio==1.5.8
+    - networkx==2.6.3
+    - notebook==6.5.6
     - notebook-shim==0.2.3
-    - numpy==1.26.0
+    - numpy==1.21.6
     - oauthlib==3.2.2
-    - opencv-contrib-python==4.8.1.78
-    - opencv-python==4.8.1.78
-    - overrides==7.4.0
-    - packaging==23.1
-    - pandas==2.1.3
-    - pillow==10.0.1
-    - pip==23.3.1
-    - platformdirs==3.10.0
-    - ply==3.11
-    - prometheus-client==0.14.1
-    - prompt-toolkit==3.0.36
+    - opencv-contrib-python==4.5.3.56
+    - opencv-python==4.5.5.64
+    - outcome==1.3.0.post0
+    - packaging==23.2
+    - pandas==1.3.5
+    - pandocfilters==1.5.0
+    - parso==0.8.3
+    - pexpect==4.9.0
+    - pickleshare==0.7.5
+    - pillow==8.2.0
+    - pkgutil-resolve-name==1.3.10
+    - prometheus-client==0.17.1
+    - prompt-toolkit==3.0.41
     - protobuf==3.20.3
-    - psutil==5.9.0
-    - pygments==2.15.1
-    - pyjwt==2.4.0
-    - pyopenssl==23.2.0
+    - psutil==5.9.6
+    - ptyprocess==0.7.0
+    - pyasn1==0.5.1
+    - pyasn1-modules==0.3.0
+    - pyglfw==0.2.2
+    - pyglm==1.0.0
+    - pygments==2.17.2
+    - pygml==0.1.0
+    - pymysql==1.1.0
+    - pyopenssl==23.3.0
     - pyparsing==3.1.1
-    - pyqt5==5.15.10
-    - pyqt5-sip==12.13.0
-    - pysocks==1.7.1
+    - pyrsistent==0.19.3
+    - python-dateutil==2.8.2
     - python-json-logger==2.0.7
     - pytz==2023.3.post1
+    - pywavelets==1.3.0
     - pyyaml==6.0.1
-    - pyzmq==25.1.0
-    - qtconsole==5.5.0
+    - pyzmq==24.0.1
+    - qtconsole==5.4.4
     - qtpy==2.4.1
-    - referencing==0.30.2
     - requests==2.31.0
+    - requests-oauthlib==1.3.1
     - rfc3339-validator==0.1.4
     - rfc3986-validator==0.1.1
-    - rpds-py==0.10.6
+    - rsa==4.9
+    - scikit-image==0.18.1
+    - scikit-learn==1.0.2
+    - scipy==1.7.3
+    - seaborn==0.11.1
+    - selenium==4.4.0
     - send2trash==1.8.2
-    - setuptools==68.0.0
-    - sip==6.7.12
-    - sniffio==1.2.0
-    - soupsieve==2.5
-    - sympy==1.11.1
-    - tensorboard==2.12.1
-    - tensorboard-data-server==0.7.0
+    - shutils==0.1.0
+    - sniffio==1.3.0
+    - sortedcontainers==2.4.0
+    - soupsieve==2.4.1
+    - spectral==0.22.2
+    - tensorboard==2.11.2
+    - tensorboard-data-server==0.6.1
     - tensorboard-plugin-wit==1.8.1
     - terminado==0.17.1
+    - threadpoolctl==3.1.0
+    - tifffile==2021.11.2
     - tinycss2==1.2.1
     - tomli==2.0.1
-    - torch==2.1.1
-    - torchaudio==2.1.1
-    - torchvision==0.16.1
-    - tornado==6.3.3
-    - tqdm==4.66.1
-    - traitlets==5.7.1
-    - triton==2.1.0
+    - tornado==6.2
+    - traitlets==5.9.0
+    - trio==0.22.2
+    - trio-websocket==0.11.1
     - typing-extensions==4.7.1
-    - tzdata==2023.3
+    - uri-template==1.3.0
     - urllib3==1.26.18
+    - urllib3-secure-extra==0.1.0
+    - utm==0.7.0
+    - wcwidth==0.2.12
+    - webcolors==1.13
+    - webdriver-manager==3.5.4
     - webencodings==0.5.1
-    - websocket-client==0.58.0
+    - websocket-client==1.6.1
     - werkzeug==2.2.3
-    - wheel==0.41.2
-    - widgetsnbextension==4.0.5
-    - yarl==1.8.1
+    - widgetsnbextension==3.5.2
+    - wsproto==1.2.0
+    - y-py==0.6.2
+    - ypy-websocket==0.8.4
+    - zipp==3.4.1
