#1-omit build information

--- a/environment.yml
+++ b/environment.yml
@@ -6,123 +6,123 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
-  - _openmp_mutex=4.5=2_kmp_llvm
-  - blas=1.0=mkl
-  - brotlipy=0.7.0=py37h27cfd23_1003
-  - bzip2=1.0.8=h7b6447c_0
-  - ca-certificates=2023.08.22=h06a4308_0
-  - cairo=1.16.0=hb05425b_5
-  - certifi=2022.12.7=py37h06a4308_0
-  - cffi=1.15.1=py37h5eee18b_3
-  - cuda-cudart=11.8.89=0
-  - cuda-cupti=11.8.87=0
-  - cuda-libraries=11.8.0=0
-  - cuda-nvrtc=11.8.89=0
-  - cuda-nvtx=11.8.86=0
-  - cuda-runtime=11.8.0=0
-  - expat=2.5.0=h6a678d5_0
-  - ffmpeg=4.0=hcdf2ecd_0
-  - fontconfig=2.14.1=h4c34cd2_2
-  - freeglut=3.0.0=hf484d3e_5
-  - freetype=2.12.1=h4a9f257_0
-  - giflib=5.2.1=h5eee18b_3
-  - glfw=3.3.8=hd590300_2
-  - glfw3=3.2.1=0
-  - glib=2.69.1=he621ea3_2
-  - gmp=6.2.1=h295c915_3
-  - gnutls=3.6.15=he1e5248_0
-  - graphite2=1.3.14=h295c915_1
-  - harfbuzz=1.8.8=hffaf4a1_0
-  - hdf5=1.10.2=hba1933b_1
-  - icu=58.2=he6710b0_3
-  - intel-openmp=2021.4.0=h06a4308_3561
-  - jasper=2.0.14=hd8c5072_2
-  - jpeg=9e=h5eee18b_1
-  - lame=3.100=h7b6447c_0
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libcublas=11.11.3.6=0
-  - libcufft=10.9.0.58=0
-  - libcufile=1.8.1.2=0
-  - libcurand=10.3.4.101=0
-  - libcusolver=11.4.1.48=0
-  - libcusparse=11.7.5.86=0
-  - libdeflate=1.17=h5eee18b_1
-  - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=13.2.0=h807b86a_3
-  - libgfortran-ng=7.5.0=ha8ba4b0_17
-  - libgfortran4=7.5.0=ha8ba4b0_17
-  - libglu=9.0.0=hf484d3e_1
-  - libiconv=1.16=h7f8727e_2
-  - libidn2=2.3.4=h5eee18b_0
-  - libnpp=11.8.0.86=0
-  - libnvjpeg=11.9.0.86=0
-  - libopencv=3.4.2=hb342d67_1
-  - libopus=1.3.1=h7b6447c_0
-  - libpng=1.6.39=h5eee18b_0
-  - libstdcxx-ng=13.2.0=h7e041cc_3
-  - libtasn1=4.19.0=h5eee18b_0
-  - libtiff=4.5.1=h6a678d5_0
-  - libunistring=0.9.10=h27cfd23_0
-  - libuuid=1.41.5=h5eee18b_0
-  - libvpx=1.7.0=h439df22_0
-  - libwebp=1.2.4=h11a3e52_1
-  - libwebp-base=1.2.4=h5eee18b_1
-  - libxcb=1.15=h0b41bf4_0
-  - libxml2=2.10.4=hcbfbd50_0
-  - llvm-openmp=14.0.6=h9e868ea_0
-  - lz4-c=1.9.4=h6a678d5_0
-  - mkl=2021.4.0=h06a4308_640
-  - mkl-service=2.4.0=py37h7f8727e_0
-  - mkl_fft=1.3.1=py37hd3c417c_0
-  - mkl_random=1.2.2=py37h51133e4_0
-  - ncurses=6.4=h6a678d5_0
-  - nettle=3.7.3=hbbd107a_1
-  - numpy-base=1.21.5=py37ha15fc14_3
-  - opencv=3.4.2=py37h6fd60c2_1
-  - openh264=2.1.1=h4ff587b_0
-  - openssl=1.1.1w=h7f8727e_0
-  - pcre=8.45=h295c915_0
-  - pip=22.3.1=py37h06a4308_0
-  - pixman=0.40.0=h7f8727e_1
-  - pthread-stubs=0.4=h36c2ea0_1001
-  - py-opencv=3.4.2=py37hb342d67_1
-  - pycparser=2.21=pyhd3eb1b0_0
-  - pyopengl=3.1.1a1=py37h06a4308_0
-  - pysocks=1.7.1=py37_1
-  - python=3.7.16=h7a1cb2a_0
-  - pytorch=1.13.1=py3.7_cpu_0
-  - pytorch-cuda=11.8=h7e8668a_5
-  - pytorch-mutex=1.0=cpu
-  - readline=8.2=h5eee18b_0
-  - setuptools=65.6.3=py37h06a4308_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - sqlite=3.41.2=h5eee18b_0
-  - tk=8.6.12=h1ccaba5_0
-  - torchaudio=0.13.1=py37_cpu
-  - torchvision=0.13.1=cpu_py37h164cc8f_0
-  - typing_extensions=4.3.0=py37h06a4308_0
-  - wheel=0.38.4=py37h06a4308_0
-  - xorg-fixesproto=5.0=h7f98852_1002
-  - xorg-kbproto=1.0.7=h7f98852_1002
-  - xorg-libx11=1.8.7=h8ee46fc_0
-  - xorg-libxau=1.0.11=hd590300_0
-  - xorg-libxcursor=1.2.0=h0b41bf4_1
-  - xorg-libxdmcp=1.1.3=h7f98852_0
-  - xorg-libxext=1.3.4=h0b41bf4_2
-  - xorg-libxfixes=5.0.3=h7f98852_1004
-  - xorg-libxinerama=1.1.5=h27087fc_0
-  - xorg-libxrandr=1.5.2=h7f98852_1
-  - xorg-libxrender=0.9.11=hd590300_0
-  - xorg-randrproto=1.5.0=h7f98852_1001
-  - xorg-renderproto=0.11.1=h7f98852_1002
-  - xorg-xextproto=7.3.0=h0b41bf4_1003
-  - xorg-xproto=7.0.31=h7f98852_1007
-  - xz=5.4.2=h5eee18b_0
-  - zlib=1.2.13=h5eee18b_0
-  - zstd=1.5.5=hc292b87_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=4.5
+  - blas=1.0
+  - brotlipy=0.7.0
+  - bzip2=1.0.8
+  - ca-certificates=2023.08.22
+  - cairo=1.16.0
+  - certifi=2022.12.7
+  - cffi=1.15.1
+  - cuda-cudart=11.8.89
+  - cuda-cupti=11.8.87
+  - cuda-libraries=11.8.0
+  - cuda-nvrtc=11.8.89
+  - cuda-nvtx=11.8.86
+  - cuda-runtime=11.8.0
+  - expat=2.5.0
+  - ffmpeg=4.0
+  - fontconfig=2.14.1
+  - freeglut=3.0.0
+  - freetype=2.12.1
+  - giflib=5.2.1
+  - glfw=3.3.8
+  - glfw3=3.2.1
+  - glib=2.69.1
+  - gmp=6.2.1
+  - gnutls=3.6.15
+  - graphite2=1.3.14
+  - harfbuzz=1.8.8
+  - hdf5=1.10.2
+  - icu=58.2
+  - intel-openmp=2021.4.0
+  - jasper=2.0.14
+  - jpeg=9e
+  - lame=3.100
+  - lcms2=2.12
+  - ld_impl_linux-64=2.38
+  - lerc=3.0
+  - libcublas=11.11.3.6
+  - libcufft=10.9.0.58
+  - libcufile=1.8.1.2
+  - libcurand=10.3.4.101
+  - libcusolver=11.4.1.48
+  - libcusparse=11.7.5.86
+  - libdeflate=1.17
+  - libffi=3.4.4
+  - libgcc-ng=13.2.0
+  - libgfortran-ng=7.5.0
+  - libgfortran4=7.5.0
+  - libglu=9.0.0
+  - libiconv=1.16
+  - libidn2=2.3.4
+  - libnpp=11.8.0.86
+  - libnvjpeg=11.9.0.86
+  - libopencv=3.4.2
+  - libopus=1.3.1
+  - libpng=1.6.39
+  - libstdcxx-ng=13.2.0
+  - libtasn1=4.19.0
+  - libtiff=4.5.1
+  - libunistring=0.9.10
+  - libuuid=1.41.5
+  - libvpx=1.7.0
+  - libwebp=1.2.4
+  - libwebp-base=1.2.4
+  - libxcb=1.15
+  - libxml2=2.10.4
+  - llvm-openmp=14.0.6
+  - lz4-c=1.9.4
+  - mkl=2021.4.0
+  - mkl-service=2.4.0
+  - mkl_fft=1.3.1
+  - mkl_random=1.2.2
+  - ncurses=6.4
+  - nettle=3.7.3
+  - numpy-base=1.21.5
+  - opencv=3.4.2
+  - openh264=2.1.1
+  - openssl=1.1.1w
+  - pcre=8.45
+  - pip=22.3.1
+  - pixman=0.40.0
+  - pthread-stubs=0.4
+  - py-opencv=3.4.2
+  - pycparser=2.21
+  - pyopengl=3.1.1a1
+  - pysocks=1.7.1
+  - python=3.7.16
+  - pytorch=1.13.1
+  - pytorch-cuda=11.8
+  - pytorch-mutex=1.0
+  - readline=8.2
+  - setuptools=65.6.3
+  - six=1.16.0
+  - sqlite=3.41.2
+  - tk=8.6.12
+  - torchaudio=0.13.1
+  - torchvision=0.13.1
+  - typing_extensions=4.3.0
+  - wheel=0.38.4
+  - xorg-fixesproto=5.0
+  - xorg-kbproto=1.0.7
+  - xorg-libx11=1.8.7
+  - xorg-libxau=1.0.11
+  - xorg-libxcursor=1.2.0
+  - xorg-libxdmcp=1.1.3
+  - xorg-libxext=1.3.4
+  - xorg-libxfixes=5.0.3
+  - xorg-libxinerama=1.1.5
+  - xorg-libxrandr=1.5.2
+  - xorg-libxrender=0.9.11
+  - xorg-randrproto=1.5.0
+  - xorg-renderproto=0.11.1
+  - xorg-xextproto=7.3.0
+  - xorg-xproto=7.0.31
+  - xz=5.4.2
+  - zlib=1.2.13
+  - zstd=1.5.5
   - pip:
     - absl-py==2.0.0
     - aiofiles==22.1.0
