--- a/environment.yml
+++ b/environment.yml
@@ -1,20 +1,16 @@
-name: AOS-ImageRestoration
+name: aos-image-restoration
 channels:
   - pytorch
-  - menpo
   - nvidia
-  - conda-forge
   - defaults
 dependencies:
   - _libgcc_mutex=0.1
-  - _openmp_mutex=4.5
+  - _openmp_mutex=5.1
   - blas=1.0
-  - brotlipy=0.7.0
+  - brotli-python=1.0.9
   - bzip2=1.0.8
   - ca-certificates=2023.08.22
-  - cairo=1.16.0
-  - certifi=2022.12.7
-  - cffi=1.15.1
+  - charset-normalizer=2.0.4
   - cuda-cudart=11.8.89
   - cuda-cupti=11.8.87
   - cuda-libraries=11.8.0
@@ -22,22 +18,12 @@ dependencies:
   - cuda-nvtx=11.8.86
   - cuda-runtime=11.8.0
   - expat=2.5.0
-  - ffmpeg=4.0
-  - fontconfig=2.14.1
-  - freeglut=3.0.0
+  - ffmpeg=4.3
   - freetype=2.12.1
   - giflib=5.2.1
-  - glfw=3.3.8
-  - glfw3=3.2.1
-  - glib=2.69.1
   - gmp=6.2.1
   - gnutls=3.6.15
-  - graphite2=1.3.14
-  - harfbuzz=1.8.8
-  - hdf5=1.10.2
-  - icu=58.2
-  - intel-openmp=2021.4.0
-  - jasper=2.0.14
+  - intel-openmp=2023.1.0
   - jpeg=9e
   - lame=3.100
   - lcms2=2.12
@@ -45,235 +31,204 @@ dependencies:
   - lerc=3.0
   - libcublas=11.11.3.6
   - libcufft=10.9.0.58
-  - libcufile=1.8.1.2
-  - libcurand=10.3.4.101
+  - libcufile=1.8.0.34
+  - libcurand=10.3.4.52
   - libcusolver=11.4.1.48
   - libcusparse=11.7.5.86
   - libdeflate=1.17
   - libffi=3.4.4
-  - libgcc-ng=13.2.0
-  - libgfortran-ng=7.5.0
-  - libgfortran4=7.5.0
-  - libglu=9.0.0
+  - libgcc-ng=11.2.0
+  - libgomp=11.2.0
   - libiconv=1.16
   - libidn2=2.3.4
+  - libjpeg-turbo=2.0.0
   - libnpp=11.8.0.86
   - libnvjpeg=11.9.0.86
-  - libopencv=3.4.2
-  - libopus=1.3.1
   - libpng=1.6.39
-  - libstdcxx-ng=13.2.0
+  - libstdcxx-ng=11.2.0
   - libtasn1=4.19.0
   - libtiff=4.5.1
   - libunistring=0.9.10
   - libuuid=1.41.5
-  - libvpx=1.7.0
-  - libwebp=1.2.4
-  - libwebp-base=1.2.4
-  - libxcb=1.15
-  - libxml2=2.10.4
+  - libwebp=1.3.2
+  - libwebp-base=1.3.2
   - llvm-openmp=14.0.6
   - lz4-c=1.9.4
-  - mkl=2021.4.0
-  - mkl-service=2.4.0
-  - mkl_fft=1.3.1
-  - mkl_random=1.2.2
+  - mkl=2023.1.0
+  - mkl_fft=1.3.8
+  - mkl_random=1.2.4
+  - mpc=1.1.0
+  - mpfr=4.0.2
   - ncurses=6.4
   - nettle=3.7.3
-  - numpy-base=1.21.5
-  - opencv=3.4.2
+  - numpy-base=1.26.0
   - openh264=2.1.1
-  - openssl=1.1.1w
-  - pcre=8.45
-  - pip=22.3.1
-  - pixman=0.40.0
-  - pthread-stubs=0.4
-  - py-opencv=3.4.2
+  - openjpeg=2.4.0
+  - openssl=3.0.12
   - pycparser=2.21
-  - pyopengl=3.1.1a1
-  - pysocks=1.7.1
-  - python=3.7.16
-  - pytorch=1.13.1
+  - python=3.11.5
+  - python-dateutil=2.8.2
+  - python-tzdata=2023.3
+  - pytorch=2.1.0
   - pytorch-cuda=11.8
   - pytorch-mutex=1.0
   - readline=8.2
-  - setuptools=65.6.3
   - six=1.16.0
   - sqlite=3.41.2
+  - tbb=2021.8.0
   - tk=8.6.12
-  - torchaudio=0.13.1
-  - torchvision=0.13.1
-  - typing_extensions=4.3.0
-  - wheel=0.38.4
-  - xorg-fixesproto=5.0
-  - xorg-kbproto=1.0.7
-  - xorg-libx11=1.8.7
-  - xorg-libxau=1.0.11
-  - xorg-libxcursor=1.2.0
-  - xorg-libxdmcp=1.1.3
-  - xorg-libxext=1.3.4
-  - xorg-libxfixes=5.0.3
-  - xorg-libxinerama=1.1.5
-  - xorg-libxrandr=1.5.2
-  - xorg-libxrender=0.9.11
-  - xorg-randrproto=1.5.0
-  - xorg-renderproto=0.11.1
-  - xorg-xextproto=7.3.0
-  - xorg-xproto=7.0.31
+  - torchtriton=2.1.0
+  - typing_extensions=4.7.1
+  - tzdata=2023c
   - xz=5.4.2
+  - yaml=0.2.5
   - zlib=1.2.13
   - zstd=1.5.5
   - pip:
     - absl-py==2.0.0
-    - aiofiles==22.1.0
-    - aiosqlite==0.19.0
-    - anyio==3.7.1
+    - anyio==4.0.0
     - argon2-cffi==23.1.0
     - argon2-cffi-bindings==21.2.0
-    - arrow==1.2.3
+    - arrow==1.3.0
+    - asttokens==2.4.1
+    - async-lru==2.0.4
     - attrs==23.1.0
     - babel==2.13.1
-    - backcall==0.2.0
     - beautifulsoup4==4.12.2
-    - bleach==6.0.0
-    - cached-property==1.5.2
+    - bleach==6.1.0
+    - bottleneck==1.3.5
+    - brotli==1.0.9
     - cachetools==5.3.2
-    - charset-normalizer==3.3.2
-    - configparser==5.3.0
-    - cryptography==41.0.7
-    - cycler==0.11.0
-    - cython==0.29.24
-    - debugpy==1.7.0
+    - certifi==2023.7.22
+    - cffi==1.15.1
+    - comm==0.2.0
+    - contourpy==1.2.0
+    - cryptography==41.0.3
+    - cycler==0.12.1
+    - debugpy==1.8.0
     - decorator==5.1.1
     - defusedxml==0.7.1
-    - entrypoints==0.4
-    - exceptiongroup==1.2.0
-    - fastjsonschema==2.19.0
+    - executing==2.0.1
+    - fastjsonschema==2.18.1
+    - filelock==3.9.0
+    - fonttools==4.44.0
     - fqdn==1.5.1
-    - google-auth==2.23.4
-    - google-auth-oauthlib==0.4.6
-    - grpcio==1.59.3
-    - h11==0.14.0
-    - idna==3.6
-    - imageio==2.9.0
-    - importlib-metadata==6.7.0
-    - importlib-resources==5.12.0
-    - ipykernel==6.16.2
-    - ipython==7.32.0
-    - ipython-genutils==0.2.0
-    - ipywidgets==7.6.3
+    - fsspec==2023.12.2
+    - gmpy2==2.1.2
+    - google-auth==2.25.2
+    - google-auth-oauthlib==1.2.0
+    - grpcio==1.60.0
+    - idna==3.4
+    - imageio==2.33.1
+    - ipykernel==6.26.0
+    - ipython==8.17.2
+    - ipywidgets==8.1.1
     - isoduration==20.11.0
     - jedi==0.19.1
     - jinja2==3.1.2
-    - joblib==1.3.2
     - json5==0.9.14
     - jsonpointer==2.4
-    - jsonschema==4.17.3
+    - jsonschema==4.19.2
+    - jsonschema-specifications==2023.7.1
     - jupyter==1.0.0
-    - jupyter-client==7.4.9
+    - jupyter-client==8.6.0
     - jupyter-console==6.6.3
-    - jupyter-core==4.12.0
-    - jupyter-events==0.6.3
-    - jupyter-server==1.24.0
-    - jupyter-server-fileid==0.9.0
-    - jupyter-server-ydoc==0.8.0
-    - jupyter-ydoc==0.2.5
-    - jupyterlab==3.6.6
+    - jupyter-core==5.5.0
+    - jupyter-events==0.9.0
+    - jupyter-lsp==2.2.0
+    - jupyter-server==2.10.0
+    - jupyter-server-terminals==0.4.4
+    - jupyterlab==4.0.8
     - jupyterlab-pygments==0.2.2
-    - jupyterlab-server==2.24.0
+    - jupyterlab-server==2.25.0
     - jupyterlab-widgets==3.0.9
     - kiwisolver==1.4.5
-    - lxml==4.9.3
-    - markdown==3.4.4
-    - markupsafe==2.1.3
-    - matplotlib==3.4.2
-    - matplotlib-inline==0.1.3
+    - lazy-loader==0.3
+    - markdown==3.5.1
+    - markupsafe==2.1.1
+    - matplotlib==3.8.1
+    - matplotlib-inline==0.1.6
     - mistune==3.0.2
-    - nbclassic==1.0.0
-    - nbclient==0.7.4
-    - nbconvert==7.6.0
-    - nbformat==5.8.0
+    - mkl-fft==1.3.8
+    - mkl-random==1.2.4
+    - mkl-service==2.4.0
+    - mpmath==1.3.0
+    - nbclient==0.9.0
+    - nbconvert==7.11.0
+    - nbformat==5.9.2
     - nest-asyncio==1.5.8
-    - networkx==2.6.3
-    - notebook==6.5.6
+    - networkx==3.1
+    - notebook==7.0.6
     - notebook-shim==0.2.3
-    - numpy==1.21.6
+    - numexpr==2.8.7
+    - numpy==1.26.0
     - oauthlib==3.2.2
-    - opencv-contrib-python==4.5.3.56
-    - opencv-python==4.5.5.64
-    - outcome==1.3.0.post0
+    - opencv-python==4.8.1.78
+    - overrides==7.4.0
     - packaging==23.2
-    - pandas==1.3.5
+    - pandas==2.1.4
     - pandocfilters==1.5.0
     - parso==0.8.3
-    - pexpect==4.9.0
-    - pickleshare==0.7.5
-    - pillow==8.2.0
-    - pkgutil-resolve-name==1.3.10
-    - prometheus-client==0.17.1
-    - prompt-toolkit==3.0.41
-    - protobuf==3.20.3
+    - pexpect==4.8.0
+    - pillow==10.0.1
+    - pip==23.3
+    - platformdirs==3.11.0
+    - prometheus-client==0.18.0
+    - prompt-toolkit==3.0.39
+    - protobuf==4.23.4
     - psutil==5.9.6
     - ptyprocess==0.7.0
+    - pure-eval==0.2.2
     - pyasn1==0.5.1
     - pyasn1-modules==0.3.0
-    - pyglfw==0.2.2
-    - pyglm==1.0.0
-    - pygments==2.17.2
-    - pygml==0.1.0
-    - pymysql==1.1.0
-    - pyopenssl==23.3.0
+    - pygments==2.16.1
+    - pyopenssl==23.2.0
     - pyparsing==3.1.1
-    - pyrsistent==0.19.3
-    - python-dateutil==2.8.2
+    - pysocks==1.7.1
     - python-json-logger==2.0.7
+    - pytorch-msssim==1.0.0
     - pytz==2023.3.post1
-    - pywavelets==1.3.0
     - pyyaml==6.0.1
-    - pyzmq==24.0.1
-    - qtconsole==5.4.4
+    - pyzmq==25.1.1
+    - qtconsole==5.5.0
     - qtpy==2.4.1
+    - referencing==0.30.2
     - requests==2.31.0
     - requests-oauthlib==1.3.1
     - rfc3339-validator==0.1.4
     - rfc3986-validator==0.1.1
+    - rpds-py==0.12.0
     - rsa==4.9
-    - scikit-image==0.18.1
-    - scikit-learn==1.0.2
-    - scipy==1.7.3
-    - seaborn==0.11.1
-    - selenium==4.4.0
+    - scikit-image==0.22.0
+    - scipy==1.11.4
     - send2trash==1.8.2
-    - shutils==0.1.0
+    - setuptools==68.0.0
     - sniffio==1.3.0
-    - sortedcontainers==2.4.0
-    - soupsieve==2.4.1
-    - spectral==0.22.2
-    - tensorboard==2.11.2
-    - tensorboard-data-server==0.6.1
-    - tensorboard-plugin-wit==1.8.1
+    - soupsieve==2.5
+    - stack-data==0.6.3
+    - sympy==1.11.1
+    - tbparse==0.0.8
+    - tensorboard==2.15.1
+    - tensorboard-data-server==0.7.2
     - terminado==0.17.1
-    - threadpoolctl==3.1.0
-    - tifffile==2021.11.2
+    - tifffile==2023.12.9
     - tinycss2==1.2.1
-    - tomli==2.0.1
-    - tornado==6.2
-    - traitlets==5.9.0
-    - trio==0.22.2
-    - trio-websocket==0.11.1
+    - torch==2.1.0
+    - torchaudio==2.1.0
+    - torcheval==0.0.7
+    - torchvision==0.16.0
+    - tornado==6.3.3
+    - tqdm==4.66.1
+    - traitlets==5.13.0
+    - triton==2.1.0
+    - types-python-dateutil==2.8.19.14
     - typing-extensions==4.7.1
     - uri-template==1.3.0
     - urllib3==1.26.18
-    - urllib3-secure-extra==0.1.0
-    - utm==0.7.0
-    - wcwidth==0.2.12
+    - wcwidth==0.2.9
     - webcolors==1.13
-    - webdriver-manager==3.5.4
     - webencodings==0.5.1
-    - websocket-client==1.6.1
-    - werkzeug==2.2.3
-    - widgetsnbextension==3.5.2
-    - wsproto==1.2.0
-    - y-py==0.6.2
-    - ypy-websocket==0.8.4
-    - zipp==3.4.1
+    - websocket-client==1.6.4
+    - werkzeug==3.0.1
+    - wheel==0.41.2
+    - widgetsnbextension==4.0.9
