--- a/environment.yml
+++ b/environment.yml
@@ -1,234 +1,225 @@
 name: aos-image-restoration
 channels:
   - pytorch
-  - nvidia
+  - intel
+  - conda-forge
+  - bioconda
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=5.1
-  - blas=1.0
-  - brotli-python=1.0.9
+  - absl-py=2.0.0
+  - aiohttp=3.9.1
+  - aiosignal=1.3.1
+  - aom=3.7.1
+  - asttokens=2.4.1
+  - atk-1.0=2.38.0
+  - attrs=23.1.0
+  - blinker=1.7.0
+  - blosc=1.21.5
+  - brotli=1.1.0
+  - brotli-bin=1.1.0
+  - brotli-python=1.1.0
+  - brunsli=0.1
   - bzip2=1.0.8
-  - ca-certificates=2023.08.22
-  - charset-normalizer=2.0.4
-  - cuda-cudart=11.8.89
-  - cuda-cupti=11.8.87
-  - cuda-libraries=11.8.0
-  - cuda-nvrtc=11.8.89
-  - cuda-nvtx=11.8.86
-  - cuda-runtime=11.8.0
+  - c-ares=1.24.0
+  - c-blosc2=2.11.3
+  - ca-certificates=2023.11.17
+  - cachetools=5.3.2
+  - cairo=1.18.0
+  - certifi=2023.7.22
+  - cffi=1.16.0
+  - charls=2.4.2
+  - charset-normalizer=3.3.2
+  - click=8.1.7
+  - colorama=0.4.6
+  - contourpy=1.2.0
+  - cryptography=41.0.7
+  - cycler=0.12.1
+  - dav1d=1.2.1
+  - decorator=5.1.1
+  - exceptiongroup=1.2.0
+  - executing=2.0.1
   - expat=2.5.0
-  - ffmpeg=4.3
+  - ffmpeg=6.1.0
+  - filelock=3.13.1
+  - font-ttf-dejavu-sans-mono=2.37
+  - font-ttf-inconsolata=3.000
+  - font-ttf-source-code-pro=2.038
+  - font-ttf-ubuntu=0.83
+  - fontconfig=2.14.2
+  - fonts-conda-ecosystem=1
+  - fonts-conda-forge=1
+  - fonttools=4.47.0
   - freetype=2.12.1
+  - fribidi=1.0.10
+  - frozenlist=1.4.1
+  - gdk-pixbuf=2.42.10
+  - gettext=0.21.1
   - giflib=5.2.1
-  - gmp=6.2.1
-  - gnutls=3.6.15
-  - intel-openmp=2023.1.0
-  - jpeg=9e
+  - gmp=6.3.0
+  - gmpy2=2.1.2
+  - gnutls=3.7.9
+  - google-auth=2.25.2
+  - google-auth-oauthlib=1.2.0
+  - graphite2=1.3.13
+  - graphviz=9.0.0
+  - grpcio=1.60.0
+  - gtk2=2.24.33
+  - gts=0.7.6
+  - harfbuzz=8.3.0
+  - icu=73.2
+  - idna=3.6
+  - imagecodecs=2023.9.18
+  - imageio=2.33.1
+  - importlib-metadata=7.0.1
+  - ipython=8.19.0
+  - jedi=0.19.1
+  - jinja2=3.1.2
+  - jxrlib=1.1
+  - kiwisolver=1.4.5
   - lame=3.100
-  - lcms2=2.12
-  - ld_impl_linux-64=2.38
-  - lerc=3.0
-  - libcublas=11.11.3.6
-  - libcufft=10.9.0.58
-  - libcufile=1.8.0.34
-  - libcurand=10.3.4.52
-  - libcusolver=11.4.1.48
-  - libcusparse=11.7.5.86
-  - libdeflate=1.17
-  - libffi=3.4.4
-  - libgcc-ng=11.2.0
-  - libgomp=11.2.0
-  - libiconv=1.16
+  - lazy_loader=0.3
+  - lcms2=2.16
+  - lerc=4.0.0
+  - libabseil=20230802.1
+  - libaec=1.1.2
+  - libass=0.17.1
+  - libavif16=1.0.3
+  - libblas=3.9.0
+  - libbrotlicommon=1.1.0
+  - libbrotlidec=1.1.0
+  - libbrotlienc=1.1.0
+  - libcblas=3.9.0
+  - libcxx=16.0.6
+  - libdeflate=1.19
+  - libexpat=2.5.0
+  - libffi=3.4.2
+  - libgd=2.3.3
+  - libgfortran=5.0.0
+  - libgfortran5=13.2.0
+  - libglib=2.78.3
+  - libgrpc=1.60.0
+  - libiconv=1.17
   - libidn2=2.3.4
-  - libjpeg-turbo=2.0.0
-  - libnpp=11.8.0.86
-  - libnvjpeg=11.9.0.86
+  - libjpeg-turbo=3.0.0
+  - liblapack=3.9.0
+  - libopenblas=0.3.25
+  - libopus=1.3.1
   - libpng=1.6.39
-  - libstdcxx-ng=11.2.0
+  - libprotobuf=4.24.4
+  - libre2-11=2023.06.02
+  - librsvg=2.56.3
+  - libsqlite=3.44.2
   - libtasn1=4.19.0
-  - libtiff=4.5.1
+  - libtiff=4.6.0
   - libunistring=0.9.10
-  - libuuid=1.41.5
+  - libvpx=1.13.1
   - libwebp=1.3.2
   - libwebp-base=1.3.2
-  - llvm-openmp=14.0.6
+  - libxcb=1.15
+  - libxml2=2.12.3
+  - libzlib=1.2.13
+  - libzopfli=1.0.3
+  - llvm-openmp=17.0.6
   - lz4-c=1.9.4
-  - mkl=2023.1.0
-  - mkl_fft=1.3.8
-  - mkl_random=1.2.4
-  - mpc=1.1.0
-  - mpfr=4.0.2
+  - markdown=3.5.1
+  - markupsafe=2.1.3
+  - matplotlib=3.8.2
+  - matplotlib-base=3.8.2
+  - matplotlib-inline=0.1.6
+  - mpc=1.3.1
+  - mpfr=4.2.1
+  - mpmath=1.3.0
+  - multidict=6.0.4
+  - munkres=1.1.4
   - ncurses=6.4
-  - nettle=3.7.3
-  - numpy-base=1.26.0
-  - openh264=2.1.1
-  - openjpeg=2.4.0
-  - openssl=3.0.12
+  - nettle=3.9.1
+  - networkx=3.2.1
+  - numpy=1.26.2
+  - oauthlib=3.2.2
+  - openh264=2.4.0
+  - openjpeg=2.5.0
+  - openssl=3.2.0
+  - p11-kit=0.24.1
+  - packaging=23.2
+  - pandas=2.1.4
+  - pango=1.50.14
+  - parso=0.8.3
+  - pcre2=10.42
+  - pexpect=4.8.0
+  - pickleshare=0.7.5
+  - pillow=10.1.0
+  - pip=23.3.2
+  - pixman=0.42.2
+  - prompt-toolkit=3.0.42
+  - protobuf=4.24.4
+  - pthread-stubs=0.4
+  - ptyprocess=0.7.0
+  - pure_eval=0.2.2
+  - pyasn1=0.5.1
+  - pyasn1-modules=0.3.0
   - pycparser=2.21
-  - python=3.11.5
+  - pygments=2.17.2
+  - pyjwt=2.8.0
+  - pyopenssl=23.3.0
+  - pyparsing=3.1.1
+  - pysocks=1.7.1
+  - python=3.11.7
   - python-dateutil=2.8.2
-  - python-tzdata=2023.3
-  - pytorch=2.1.0
-  - pytorch-cuda=11.8
-  - pytorch-mutex=1.0
+  - python-graphviz=0.20.1
+  - python-tzdata=2023.4
+  - python_abi=3.11
+  - pytorch=2.1.2
+  - pytorch-msssim=1.0.0
+  - pytz=2023.3.post1
+  - pyu2f=0.1.5
+  - pywavelets=1.4.1
+  - pyyaml=6.0.1
+  - rav1e=0.6.6
+  - re2=2023.06.02
   - readline=8.2
+  - requests=2.31.0
+  - requests-oauthlib=1.3.1
+  - rsa=4.9
+  - scikit-image=0.22.0
+  - scipy=1.11.4
+  - setuptools=68.2.2
   - six=1.16.0
-  - sqlite=3.41.2
-  - tbb=2021.8.0
-  - tk=8.6.12
-  - torchtriton=2.1.0
-  - typing_extensions=4.7.1
-  - tzdata=2023c
-  - xz=5.4.2
+  - snappy=1.1.10
+  - stack_data=0.6.2
+  - svt-av1=1.8.0
+  - sympy=1.12
+  - tensorboard=2.15.1
+  - tensorboard-data-server=0.7.0
+  - tifffile=2023.12.9
+  - tk=8.6.13
+  - torchaudio=2.1.2
+  - torchvision=0.16.2
+  - tornado=6.3.3
+  - tqdm=4.66.1
+  - traitlets=5.14.0
+  - typing_extensions=4.9.0
+  - tzdata=2023d
+  - urllib3=2.1.0
+  - wcwidth=0.2.12
+  - werkzeug=3.0.1
+  - wheel=0.42.0
+  - x264=1!164.3095
+  - x265=3.5
+  - xorg-libxau=1.0.11
+  - xorg-libxdmcp=1.1.3
+  - xz=5.2.6
   - yaml=0.2.5
+  - yarl=1.9.3
+  - zfp=1.0.1
+  - zipp=3.17.0
   - zlib=1.2.13
+  - zlib-ng=2.0.7
   - zstd=1.5.5
   - pip:
-    - absl-py==2.0.0
-    - anyio==4.0.0
-    - argon2-cffi==23.1.0
-    - argon2-cffi-bindings==21.2.0
-    - arrow==1.3.0
-    - asttokens==2.4.1
-    - async-lru==2.0.4
-    - attrs==23.1.0
-    - babel==2.13.1
-    - beautifulsoup4==4.12.2
-    - bleach==6.1.0
-    - bottleneck==1.3.5
-    - brotli==1.0.9
-    - cachetools==5.3.2
-    - certifi==2023.7.22
-    - cffi==1.15.1
-    - comm==0.2.0
-    - contourpy==1.2.0
-    - cryptography==41.0.3
-    - cycler==0.12.1
-    - debugpy==1.8.0
-    - decorator==5.1.1
-    - defusedxml==0.7.1
-    - executing==2.0.1
-    - fastjsonschema==2.18.1
-    - filelock==3.9.0
-    - fonttools==4.44.0
-    - fqdn==1.5.1
     - fsspec==2023.12.2
-    - gmpy2==2.1.2
-    - google-auth==2.25.2
-    - google-auth-oauthlib==1.2.0
-    - grpcio==1.60.0
-    - idna==3.4
-    - imageio==2.33.1
-    - ipykernel==6.26.0
-    - ipython==8.17.2
-    - ipywidgets==8.1.1
-    - isoduration==20.11.0
-    - jedi==0.19.1
-    - jinja2==3.1.2
-    - json5==0.9.14
-    - jsonpointer==2.4
-    - jsonschema==4.19.2
-    - jsonschema-specifications==2023.7.1
-    - jupyter==1.0.0
-    - jupyter-client==8.6.0
-    - jupyter-console==6.6.3
-    - jupyter-core==5.5.0
-    - jupyter-events==0.9.0
-    - jupyter-lsp==2.2.0
-    - jupyter-server==2.10.0
-    - jupyter-server-terminals==0.4.4
-    - jupyterlab==4.0.8
-    - jupyterlab-pygments==0.2.2
-    - jupyterlab-server==2.25.0
-    - jupyterlab-widgets==3.0.9
-    - kiwisolver==1.4.5
-    - lazy-loader==0.3
-    - markdown==3.5.1
-    - markupsafe==2.1.1
-    - matplotlib==3.8.1
-    - matplotlib-inline==0.1.6
-    - mistune==3.0.2
-    - mkl-fft==1.3.8
-    - mkl-random==1.2.4
-    - mkl-service==2.4.0
-    - mpmath==1.3.0
-    - nbclient==0.9.0
-    - nbconvert==7.11.0
-    - nbformat==5.9.2
-    - nest-asyncio==1.5.8
-    - networkx==3.1
-    - notebook==7.0.6
-    - notebook-shim==0.2.3
-    - numexpr==2.8.7
-    - numpy==1.26.0
-    - oauthlib==3.2.2
+    - hiddenlayer==0.3
     - opencv-python==4.8.1.78
-    - overrides==7.4.0
-    - packaging==23.2
-    - pandas==2.1.4
-    - pandocfilters==1.5.0
-    - parso==0.8.3
-    - pexpect==4.8.0
-    - pillow==10.0.1
-    - pip==23.3
-    - platformdirs==3.11.0
-    - prometheus-client==0.18.0
-    - prompt-toolkit==3.0.39
-    - protobuf==4.23.4
-    - psutil==5.9.6
-    - ptyprocess==0.7.0
-    - pure-eval==0.2.2
-    - pyasn1==0.5.1
-    - pyasn1-modules==0.3.0
-    - pygments==2.16.1
-    - pyopenssl==23.2.0
-    - pyparsing==3.1.1
-    - pysocks==1.7.1
-    - python-json-logger==2.0.7
-    - pytorch-msssim==1.0.0
-    - pytz==2023.3.post1
-    - pyyaml==6.0.1
-    - pyzmq==25.1.1
-    - qtconsole==5.5.0
-    - qtpy==2.4.1
-    - referencing==0.30.2
-    - requests==2.31.0
-    - requests-oauthlib==1.3.1
-    - rfc3339-validator==0.1.4
-    - rfc3986-validator==0.1.1
-    - rpds-py==0.12.0
-    - rsa==4.9
-    - scikit-image==0.22.0
-    - scipy==1.11.4
-    - send2trash==1.8.2
-    - setuptools==68.0.0
-    - sniffio==1.3.0
-    - soupsieve==2.5
-    - stack-data==0.6.3
-    - sympy==1.11.1
     - tbparse==0.0.8
-    - tensorboard==2.15.1
-    - tensorboard-data-server==0.7.2
-    - terminado==0.17.1
-    - tifffile==2023.12.9
-    - tinycss2==1.2.1
-    - torch==2.1.0
-    - torchaudio==2.1.0
     - torcheval==0.0.7
-    - torchvision==0.16.0
-    - tornado==6.3.3
-    - tqdm==4.66.1
-    - traitlets==5.13.0
-    - triton==2.1.0
-    - types-python-dateutil==2.8.19.14
-    - typing-extensions==4.7.1
-    - uri-template==1.3.0
-    - urllib3==1.26.18
-    - wcwidth==0.2.9
-    - webcolors==1.13
-    - webencodings==0.5.1
-    - websocket-client==1.6.4
-    - werkzeug==3.0.1
-    - wheel==0.41.2
-    - widgetsnbextension==4.0.9
+    - torchviz==0.0.2
+prefix: /Users/PhilippSchmidt/miniforge3/envs/AOSRestormer
